fix position shift not on top and mutliple z-index

--- a/historical.css
+++ b/historical.css
@@ -90,7 +90,7 @@ div.view {
 
 .loading-spinner {
 	display: none;
-    position: relative;
+    /* position: relative; */
     /* left: 50%; */
     transform: translate(-50%, -50%);
     border: 10px solid rgba(0, 0, 0, 0.1);
@@ -99,10 +99,9 @@ div.view {
     width: 80px;
     height: 80px;
     animation: spin 1.5s linear infinite;
-    /* z-index: 1000; */
+    z-index: 5;
     margin-left: 50%;
     margin-top: 15%;
-    z-index: 2;
 }
 
 
